<resources>
    <string name="app_name">Password Manager</string>
    <string name="login">Login</string>
    <string name="please_login_in_to_continue">Please login in to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="have_an_account">If you have an account?</string>
    <string name="signup">Signup</string>
    <string name="server_client_id">803515617697-fsp1moccsovkjpgs91rlf6sv76snpqit.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="documents">Documents</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_password_type">Add Password Type</string>
    <string name="password_type">Password type</string>
    <string name="eg_social_media">eg: Social media</string>
    <string name="add">add</string>
    <string name="submit">submit</string>
    <string name="add_password">Add Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="save">Save</string>
    <string name="logo">logo</string>
    <string name="hi">Hi,</string>
    <string name="close">Close</string>
    <string name="upload_aadharcard">Upload AadharCard</string>
    <string name="upload_pan_card">Upload PAN Card</string>
    <string name="upload">please upload image here</string>
    <string name="all_documents">All Documents</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="generate_password">Generate password</string>
    <string name="add_notes">Add Notes</string>
    <string name="more">More</string>
    <string name="notes">Notes</string>
    <string name="notes_type_here">notes type here...</string>
    <string name="title">Title</string>
    <string name="password_lenght">Password lenght</string>
</resources>
