<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/logo"
            android:id="@+id/card_image"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_password_name"
                android:text="@string/password_type"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/poppins_semi_bold"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_password_email"
                android:text="@string/username_or_email"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/poppins_regular"
                android:textAllCaps="false"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_password_type"
            android:text="@string/submit"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:fontFamily="@font/poppins_regular"
            android:textAllCaps="false"/>
    </LinearLayout>



</androidx.cardview.widget.CardView>