<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_notes"
    app:cardCornerRadius="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardElevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/logo"
            android:id="@+id/card_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_notes_title"
                android:text="@string/title"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:textAlignment="center"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/poppins_semi_bold"
                android:textAllCaps="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/card_notes"
                android:text="@string/notes"
                android:textSize="11sp"
                android:maxLines="1"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:textColor="@color/navy_blue"
                android:fontFamily="@font/poppins_regular"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>
