<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_password_type_cardview"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/navy_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/addTypeTextHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_password_type"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                />

            <LinearLayout
                android:id="@+id/ll_add_password_type_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addTypeTextHeader">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/password_type"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                <EditText
                    android:id="@+id/add_password_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:hint="@string/eg_social_media"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="text"
                    android:background="@drawable/edit_text_bg"
                    android:maxLines="1"
                    android:importantForAutofill="no"
                    tools:ignore="TextFields" />
                <ImageView
                    android:id="@+id/add_passwordType_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/icon_ok"
                    android:contentDescription="@string/submit"
                    android:backgroundTint="@color/baby_blue"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_password_cardview"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/blue_grotto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_password_type_cardview">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/addPasswordHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_password"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                />

            <LinearLayout
                android:id="@+id/ll_add_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addPasswordHeader">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/password_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/spinner_background"
                    android:minHeight="48dp"
                    android:padding="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_password_name"
                    app:hintEnabled="true"
                    android:hint="@string/name"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_password_username"
                    app:hintEnabled="true"
                    android:hint="@string/username_or_email"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_password_password"
                    app:hintEnabled="true"
                    android:hint="@string/password"
                    android:textColorHint="@color/white"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/save_password_button"
                    android:text="@string/save"
                    android:background="@drawable/button_background"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
