<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/login_header_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/please_login_in_to_continue"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_header_desc_text">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/ll_login_container"
           android:orientation="vertical">
           <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/name_txt"
           android:text="@string/name"
           android:textSize="12sp"
           android:fontFamily="@font/poppins_semi_bold"
           android:textColor="@color/navy_blue"
           android:visibility="gone"
           android:layout_marginTop="20dp"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="20dp"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/loginName"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               app:boxCornerRadiusBottomEnd="20dp"
               app:boxCornerRadiusBottomStart="20dp"
               app:boxCornerRadiusTopEnd="20dp"
               app:boxCornerRadiusTopStart="20dp"
               app:hintEnabled="false"
               android:visibility="gone"
               app:startIconTint="@color/blue_grotto">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textEmailAddress"
                   android:background="@drawable/edit_text_bg"
                   android:hint="@string/name"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/email_address"
               android:textSize="12sp"
               android:fontFamily="@font/poppins_semi_bold"
               android:textColor="@color/navy_blue"
               android:layout_marginTop="20dp"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/loginEmail"
               app:startIconDrawable="@drawable/icon_email"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               app:boxCornerRadiusBottomEnd="20dp"
               app:boxCornerRadiusBottomStart="20dp"
               app:boxCornerRadiusTopEnd="20dp"
               app:boxCornerRadiusTopStart="20dp"
               app:hintEnabled="false"
               app:startIconTint="@color/blue_grotto">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textEmailAddress"
                   android:background="@drawable/edit_text_bg"
                   android:hint="@string/email_address"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/password"
               android:textSize="12sp"
               android:fontFamily="@font/poppins_semi_bold"
               android:textColor="@color/navy_blue"
               android:layout_marginTop="10dp"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/login_password"
               app:startIconDrawable="@drawable/icon_password"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               app:boxCornerRadiusBottomEnd="20dp"
               app:boxCornerRadiusBottomStart="20dp"
               app:boxCornerRadiusTopEnd="20dp"
               app:boxCornerRadiusTopStart="20dp"
               app:hintEnabled="false"
               app:passwordToggleEnabled="true"
               app:startIconTint="@color/blue_grotto">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textPassword"
                   android:background="@drawable/edit_text_bg"
                   android:hint="@string/password"
                   android:maxLines="1"/>
           </com.google.android.material.textfield.TextInputLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/ll_forgot_password_container"
               android:weightSum="2"
               android:layout_marginStart="20dp"
               android:layout_marginEnd="20dp"
               android:orientation="horizontal">
               <androidx.appcompat.widget.AppCompatCheckBox
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:id="@+id/login_remember_me"
                   android:text="@string/remember_me"
                   android:textSize="12sp"
                   app:buttonTint="@color/navy_blue"
                   android:drawableStart="@color/blue_grotto"
                   android:textColor="@color/navy_blue"
                   />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:id="@+id/login_forgot_password"
                   android:text="@string/forgot_password"
                   android:textSize="12sp"
                   android:gravity="end"
                   android:textColor="@color/navy_blue"
                   />
           </LinearLayout>
           <androidx.appcompat.widget.AppCompatButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/login_button"
               android:text="@string/login"
               android:layout_marginTop="20dp"
               android:textSize="14sp"
               android:layout_gravity="center"
               android:background="@drawable/button_background"
               android:textColor="@color/white"
               android:textAlignment="center"
               android:textAllCaps="false"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:weightSum="3"
               android:layout_marginTop="10dp"
               android:layout_marginStart="80dp"
               android:layout_marginEnd="80dp"
               android:orientation="horizontal">
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1.5dp"
                   android:background="@color/navy_blue"
                   android:layout_gravity="center"
                   android:layout_weight="1"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="@string/or"
                   android:textSize="12sp"
                   android:gravity="center"
                   android:textColor="@color/navy_blue"
                   />
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1.5dp"
                   android:layout_gravity="center"
                   android:background="@color/navy_blue"
                   android:layout_weight="1"/>
           </LinearLayout>

           <ImageButton
               android:id="@+id/google_button"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="20dp"
               android:background="@android:color/transparent"
               android:contentDescription="@string/login"
               android:src="@drawable/google"
               tools:ignore="TouchTargetSizeCheck" />

           <LinearLayout
               android:id="@+id/ll_login_signup_container"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:orientation="horizontal"
               android:layout_marginBottom="20dp"
               android:weightSum="2"
               android:layout_gravity="center">

               <TextView
                   android:id="@+id/desc"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:fontFamily="@font/poppins_regular"
                   android:gravity="center"
                   android:text="@string/don_t_have_an_account"
                   android:textAlignment="center"
                   android:textColor="@color/black"
                   android:textSize="12sp" />

               <TextView
                   android:id="@+id/signup_text_link"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="10dp"
                   android:fontFamily="@font/poppins_regular"
                   android:text="@string/signup"
                   android:textAlignment="center"
                   android:textColor="@color/navy_blue"
                   android:textSize="12sp" />
           </LinearLayout>
       </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
